# hermes-2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  diffusion2d.cxx  diffusion2d.hxx  div_ops.cxx  div_ops.hxx  full-velocity.cxx  hermes-2.cxx  hermes-2.hxx  input_sources.py  loadmetric.cxx  makefile  mixed.cxx  neutral-background.cxx  neutral-background.hxx  neutral-model.cxx  radiation.cxx  recycling.cxx  rotating-ellipse-tiny.fci.nc  species.hxx  state.hxx
.github/workflows/: test.yaml
1-lowres/: BOUT.inp
3-medium/: BOUT.inp
TCV/: README.md  newtcv2_63127_64x64_profiles_9e19.nc
TCV/1-no-currents/: BOUT.inp
atomicpp/: ImpuritySpecies.cxx  RateCoefficient.cxx  makefile
blob2d/: BOUT.inp
configs/: archer_cmake.sh  archer_example.bashrc
doc/: hermes-2-manual.tex
include/: hermes-2.hxx  mixed.hxx  neutral-model.hxx
json_database/: json_database
linear-device/: README.md  hermes-2  jobscript-beuler.archer  jobscript.archer
linear-device/annulus/: BOUT.inp
linear-device/annulus-beuler/: BOUT.inp
linear-device/annulus-with-neutrals/: BOUT.inp
slab3d/: BOUT.inp
src/: full-velocity.cxx  hermes-2.cxx  mixed.cxx  neutral-model.cxx
tokamak/: README.md  adjust_curvature.py  make2dplots.py  plot_target_profiles.py  setprofiles.py  volume_integrals.py
tokamak/1-no-currents/: BOUT.inp
tokamak/2-currents/: BOUT.inp
